adjust gap and fix bug in animation

--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,6 +1,6 @@
 header {
   border-bottom: 2px solid #777;
-  padding-top: 5px;
+  padding: 5px 20px 0 5px;
   position: sticky;
   top: 0px;
   background-color: #000;
@@ -9,6 +9,7 @@ header {
   justify-content: space-evenly;
   align-items: center;
   z-index: 1;
+  gap: 0 20px;
 }
 
 h1 {
